# Estructuras_Grupo_

PARCIAL I/Aplicativo insertar/: Ingresar.cpp  Ingresar.h  main.cpp
PARCIAL I/Deberes/Deber1_Aplicativo_Ingresar/: Aplicativo.cpp  Ingresar.h
PARCIAL I/Deberes/Deber1_Aplicativo_Ingresar/Codigo/: Aplicativo.dev  Aplicativo.layout  Ingresar.cpp
PARCIAL I/Deberes/Deber2_Funciones/Ejercicio 1/: Operaciones.cpp  main.cpp
PARCIAL I/Deberes/Deber3_SobrecargarOperadores/: Data.h  OperatorsOverload.dev  main.cpp
PARCIAL I/Deberes/Proyecto/Codigo/: Archivo.h  CMakeLists.txt  Lista.h  Mantenimiento.cpp  Mantenimiento.h  Menu.cpp  Menu.h  Nodo.h  Operacion.h  OperacionesFecha.cpp  Usuario.cpp  Usuario.h  Validar.cpp  Validar.h  Vehiculo.cpp  Vehiculo.h  main.cpp  pdf.cpp
PARCIAL II/Correcion_algoritmo secuencial/Codigo/: Busqueda.cpp  Validar.cpp  Validar.h  main.cpp
PARCIAL II/Deber1_Funcion_trigonometica/Codigo/: Makefile.win  Proyecto .dev  Proyecto .layout
PARCIAL II/Deber2_Algoritmo_secuencial/Codigo/: Busqueda.cpp  Busqueda.h  main (1).cpp  main.cpp
PARCIAL II/Exposicion Arbol rojo negro/: Arbol negro y rojo.pptx
PARCIAL II/Proyecto final/Instalador/: Claves de activacion.txt
PARCIAL II/Proyecto final/Proyecto/: Proyecto.sln
PARCIAL II/Proyecto final/rojo_negro/: Arbol.h  CMakeLists.txt  Menu.cpp  Nodo.h  main.cpp
PARCIAL III/Deber_Reinas/: Arbol.h  Archivo.h  CMakeLists.txt  Direccion.h  ListaDoble.h  Menu.cpp  Menu.h  Node.h  Operacion.h  Reina.cpp  Reina.h  Solucion.h  Tablero.h  Validacion.cpp  main.cpp
PARCIAL III/Trabajo_Clase/: main.cpp
(+490 files in other folders)
